pixiv, fanbox, fantia

--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
       <a class="link" href="https://twitter.com/yoyo091600" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
+      <a class="link" href="https://pixiv.me/roza4957" target="_blank">
+        <i class="fab fa-paint-brush">&nbsp;</i>Pixiv
+      </a>
+      <a class="link" href="https://omurice.fanbox.cc" target="_blank">
+        <i class="fab fa-palette">&nbsp;</i>FANBOX
+      </a>
+      <a class="link" href="https://fantia.jp/omurice" target="_blank">
+        <i class="fab fa-palette">&nbsp;</i>Fantia
+      </a>
     </div>
 
     <div id="hashtag">
