--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
       <a class="link" href="https://pixiv.me/roza4957" target="_blank">
-        <i class="fab fa-paint-brush">&nbsp;</i>Pixiv
+        <i class="fas fa-paint-brush">&nbsp;</i>Pixiv
       </a>
       <a class="link" href="https://omurice.fanbox.cc" target="_blank">
-        <i class="fab fa-palette">&nbsp;</i>FANBOX
+        <i class="fas fa-palette">&nbsp;</i>FANBOX
       </a>
       <a class="link" href="https://fantia.jp/omurice" target="_blank">
-        <i class="fab fa-palette">&nbsp;</i>Fantia
+        <i class="fas fa-palette">&nbsp;</i>Fantia
       </a>
     </div>
 
