--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
       </a>
     </div>
 
+    <div id="links">
+      <a class="link" href="mailto:omurice@omurice-kun.com" target="_blank">
+        <i class="fas fa-envelope">&nbsp;</i>e-mail me
+      </a>
+      <a class="link" href="https://twitter.com/messages/compose?recipient_id=1103173649580748800" target="_blank">
+        <i class="fab fa-twitter-square">&nbsp;</i>DM me on Twitter
+      </a>
+      <a class="link" href="https://discordapp.com/users/258274910957207564" target="_blank">
+        <i class="fab fa-discord">&nbsp;</i>DM me on Discord
+      </a>
+    </div>
+
     <div id="hashtag">
       ❤️❤️❤️
     </div>
