--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
       </a>
     </div>
 
+    <div id="hashtag">
+      Contact Me!
+    </div>
+
     <div id="links">
       <a class="link" href="mailto:omurice@omurice-kun.com" target="_blank">
         <i class="fas fa-envelope">&nbsp;</i>e-mail me
