--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
       <a class="link" href="https://twitter.com/yoyo091600" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
+      <a class="link" href="https://www.instagram.com/omurice.art" target="_blank">
+        <i class="fab fa-instagram">&nbsp;</i>Instagram
+      </a>
+      <a class="link" href="https://misskey.io/@omurice_kun" target="_blank">
+        <i class="fas fa-comment">&nbsp;</i>misskey.io (NSFW)
+      </a>
+      <a class="link" href="https://baraag.net/@omurice_kun" target="_blank">
+        <i class="fas fa-comment">&nbsp;</i>baraag (NSFW)
+      </a>
+    </div>
+
+    <div id="topic">
+      Art Gallery
+    </div>
+
+    <div id="links">
       <a class="link" href="https://pixiv.me/roza4957" target="_blank">
         <i class="fas fa-paint-brush">&nbsp;</i>Pixiv
       </a>
@@ -58,7 +74,36 @@
       </a>
     </div>
 
-    <div id="hashtag">
+    <div id="topic">
+      Streaming
+    </div>
+
+    <div id="links">
+      <a class="link" href="https://www.twitch.tv/omu_kun" target="_blank">
+        <i class="fab fa-twitch">&nbsp;</i>Twitch
+      </a>
+      <a class="link" href="https://www.youtube.com/@omu_kun" target="_blank">
+        <i class="fab fa-youtube">&nbsp;</i>Youtube
+      </a>
+      <a class="link" href="https://kick.com/omu-kun" target="_blank">
+        <i class="fab fa-kickstarter-k">&nbsp;</i>kick.com
+      </a>
+    </div>
+
+    <div id="topic">
+      Community
+    </div>
+
+    <div id="links">
+      <a class="link" href="https://discord.gg/r7SGbacXS8" target="_blank">
+        <i class="fab fa-discord">&nbsp;</i>Discord
+      </a>
+      <a class="link" href="https://chat.omurice-kun.com/" target="_blank">
+        <i class="fas fa-rocket">&nbsp;</i>rocket.chat (NSFW)
+      </a>
+    </div>
+
+    <div id="topic">
       Contact Me!
     </div>
 
