--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
     </div>
 
     <div id="links">
+      <a class="link" href="https://www.omurice-kun.com/commission" target="_blank">
+        <i class="fas fa-info">&nbsp;</i>Commissions
+      </a>
+    </div>
+
+    <div id="topic">
+      Social Media
+    </div>
+    
+    <div id="links">
       <a class="link" href="https://twitter.com/yoyo091600" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
@@ -96,7 +106,7 @@
 
     <div id="links">
       <a class="link" href="https://discord.gg/r7SGbacXS8" target="_blank">
-        <i class="fab fa-discord">&nbsp;</i>Discord
+        <i class="fab fa-discord">&nbsp;</i>Discord Server
       </a>
       <a class="link" href="https://chat.omurice-kun.com/" target="_blank">
         <i class="fas fa-rocket">&nbsp;</i>rocket.chat (NSFW)
@@ -108,19 +118,30 @@
     </div>
 
     <div id="links">
-      <a class="link" href="mailto:omurice@omurice-kun.com" target="_blank">
-        <i class="fas fa-envelope">&nbsp;</i>e-mail me
-      </a>
       <a class="link" href="https://twitter.com/messages/compose?recipient_id=1103173649580748800" target="_blank">
         <i class="fab fa-twitter-square">&nbsp;</i>DM me on Twitter
       </a>
       <a class="link" href="https://discordapp.com/users/258274910957207564" target="_blank">
         <i class="fab fa-discord">&nbsp;</i>DM me on Discord
       </a>
+      <a class="link" href="mailto:omurice@omurice-kun.com" target="_blank">
+        <i class="fas fa-envelope">&nbsp;</i>e-mail me
+      </a>
     </div>
 
     <div id="hashtag">
       ❤️❤️❤️
     </div>
+
+    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+    <script>
+      kofiWidgetOverlay.draw('omurice_kun', {
+        'type': 'floating-chat',
+        'floating-chat.donateButton.text': 'Support Me',
+        'floating-chat.donateButton.background-color': '#00b9fe',
+        'floating-chat.donateButton.text-color': '#fff'
+      });
+    </script>
+
   </body>
 </html>
