--- a/index.html
+++ b/index.html
@@ -13,17 +13,6 @@
   </head>
 
   <body>
-
-    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-    <script>
-      kofiWidgetOverlay.draw('omurice_kun', {
-        'type': 'floating-chat',
-        'floating-chat.donateButton.text': 'Support Me',
-        'floating-chat.donateButton.background-color': '#00b9fe',
-        'floating-chat.donateButton.text-color': '#fff'
-      });
-    </script>
-
     <!-- Parallax Pixel Background Animation -->
     <section class="animated-background">
       <div id="stars1"></div>
@@ -140,6 +129,8 @@
       </a>
     </div>
 
+    <iframe id='kofiframe' src='https://ko-fi.com/omurice_kun/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;' height='712' title='omurice_kun'></iframe>
+    
     <div id="hashtag">
       ❤️❤️❤️
     </div>
