--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@
     </div>
 
     <div id="topic">
+      Support Me!
+    </div>
+
+    <div id="links">
+      <a class="link" href="https://ko-fi.com/omurice_kun" target="_blank">
+        <i class="fas fa-coffee">&nbsp;</i>Ko-fi
+      </a>
+    </div>
+
+    <div id="topic">
       Contact Me!
     </div>
 
