--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
       <a class="link" href="https://www.instagram.com/omurice.art" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
+        <i class="fab fa-instagram">&nbsp;</i>Instagram (WIP)
       </a>
       <a class="link" href="https://www.twitch.tv/omu_kun" target="_blank">
         <i class="fab fa-twitch">&nbsp;</i>Twitch
       </a>
       <a class="link" href="https://misskey.io/@omurice_kun" target="_blank">
-        <i class="fas fa-comment">&nbsp;</i>misskey.io (NSFW)
+        <i class="fas fa-comment">&nbsp;</i>misskey.io (WIP)
       </a>
       <a class="link" href="https://baraag.net/@omurice_kun" target="_blank">
-        <i class="fas fa-comment">&nbsp;</i>baraag (NSFW)
+        <i class="fas fa-comment">&nbsp;</i>baraag (WIP)
       </a>
     </div>
 
@@ -93,7 +93,7 @@
 
     <div id="links">
       <a class="link" href="https://discord.gg/r7SGbacXS8" target="_blank">
-        <i class="fab fa-discord">&nbsp;</i>Discord Server
+        <i class="fab fa-discord">&nbsp;</i>Discord Server (WIP)
       </a>
       <a class="link" href="https://chat.omurice-kun.com/" target="_blank">
         <i class="fas fa-rocket">&nbsp;</i>rocket.chat (NSFW)
