--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
       <a class="link" href="https://www.twitch.tv/omu_kun" target="_blank">
         <i class="fab fa-twitch">&nbsp;</i>Twitch
       </a>
+      <a class="link" href="https://www.plurk.com/yoyo091600" target="_blank">
+        <i class="fab fa-product-hunt">&nbsp;</i>Plurk
+      </a>
       <a class="link" href="https://misskey.io/@omurice_kun" target="_blank">
         <i class="fas fa-comment">&nbsp;</i>misskey.io (WIP)
       </a>
