changed styling, added icons

--- a/index.html
+++ b/index.html
@@ -43,90 +43,110 @@
       Omurice炸黑輪
     </div>
 
-    <div id="links">
+    <div class="links">
       <a class="link" href="https://www.omurice-kun.com/commission" target="_blank">
         <i class="fas fa-info">&nbsp;</i>Commissions
       </a>
     </div>
-
-    <div id="topic">
-      Social Media
-    </div>
     
-    <div id="links">
-      <a class="link" href="https://twitter.com/yoyo091600" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter
-      </a>
-      <a class="link" href="https://www.instagram.com/omurice.art" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram (WIP)
-      </a>
-      <a class="link" href="https://www.twitch.tv/omu_kun" target="_blank">
-        <i class="fab fa-twitch">&nbsp;</i>Twitch
-      </a>
-      <a class="link" href="https://www.plurk.com/yoyo091600" target="_blank">
-        <i class="fab fa-product-hunt">&nbsp;</i>Plurk
-      </a>
-      <a class="link" href="https://misskey.io/@omurice_kun" target="_blank">
-        <i class="fas fa-comment">&nbsp;</i>misskey.io (WIP)
-      </a>
-      <a class="link" href="https://baraag.net/@omurice_kun" target="_blank">
-        <i class="fas fa-comment">&nbsp;</i>baraag (WIP)
-      </a>
+    <div class="sectionGroupContainer">
+      <div class="sectionGroup">
+        <div class="topic">
+          Social Media
+        </div>
+        
+        <div class="links">
+          <a class="link" href="https://twitter.com/yoyo091600" target="_blank">
+            <i class="fab fa-twitter">&nbsp;</i>Twitter
+          </a>
+          <a class="link" href="https://www.instagram.com/omurice.art" target="_blank">
+            <i class="fab fa-instagram">&nbsp;</i>Instagram (WIP)
+          </a>
+          <a class="link" href="https://www.twitch.tv/omu_kun" target="_blank">
+            <i class="fab fa-twitch">&nbsp;</i>Twitch
+          </a>
+          <a class="link" href="https://www.plurk.com/yoyo091600" target="_blank">
+            <i class="fab fa-product-hunt">&nbsp;</i>Plurk
+          </a>
+          <a class="link" href="https://misskey.io/@omurice_kun" target="_blank">
+            <img src="icons/misskey.svg" alt="Logo" class="logo-icon">misskey.io (WIP)
+          </a>
+          <a class="link" href="https://baraag.net/@omurice_kun" target="_blank">
+            <img src="icons/mastodon.svg" alt="Logo" class="logo-icon">baraag.net (WIP)
+          </a>
+        </div>
+      </div>
     </div>
 
-    <div id="topic">
-      Art Gallery
+    <div class="sectionGroupContainer">
+      <div class="sectionGroup">
+        <div class="topic">
+          Art Gallery
+        </div>
+
+        <div class="links">
+          <a class="link" href="https://pixiv.me/roza4957" target="_blank">
+            <img src="icons/pixiv.svg" alt="Logo" class="logo-icon">Pixiv
+          </a>
+          <a class="link" href="https://omurice.fanbox.cc" target="_blank">
+            <img src="icons/fanbox.svg" alt="Logo" class="logo-icon">FANBOX
+          </a>
+          <a class="link" href="https://fantia.jp/omurice" target="_blank">
+            <img src="icons/fantia.svg" alt="Logo" class="logo-icon">Fantia
+          </a>
+        </div>
+      </div>
     </div>
 
-    <div id="links">
-      <a class="link" href="https://pixiv.me/roza4957" target="_blank">
-        <i class="fas fa-paint-brush">&nbsp;</i>Pixiv
-      </a>
-      <a class="link" href="https://omurice.fanbox.cc" target="_blank">
-        <i class="fas fa-palette">&nbsp;</i>FANBOX
-      </a>
-      <a class="link" href="https://fantia.jp/omurice" target="_blank">
-        <i class="fas fa-palette">&nbsp;</i>Fantia
-      </a>
+    <div class="sectionGroupContainer">
+      <div class="sectionGroup">
+        <div class="topic">
+          Community
+        </div>
+
+        <div class="links">
+          <a class="link" href="https://discord.gg/r7SGbacXS8" target="_blank">
+            <i class="fab fa-discord">&nbsp;</i>Discord Server (WIP)
+          </a>
+          <a class="link" href="https://chat.omurice-kun.com/" target="_blank">
+            <i class="fas fa-rocket">&nbsp;</i>rocket.chat (NSFW)
+          </a>
+        </div>
+      </div>
     </div>
 
-    <div id="topic">
-      Community
+    <div class="sectionGroupContainer">
+      <div class="sectionGroup">
+        <div class="topic">
+          Support Me!
+        </div>
+
+        <div class="links">
+          <a class="link" href="https://ko-fi.com/omurice_kun" target="_blank">
+            <i class="fas fa-coffee">&nbsp;</i>Ko-fi
+          </a>
+        </div>
+      </div>
     </div>
 
-    <div id="links">
-      <a class="link" href="https://discord.gg/r7SGbacXS8" target="_blank">
-        <i class="fab fa-discord">&nbsp;</i>Discord Server (WIP)
-      </a>
-      <a class="link" href="https://chat.omurice-kun.com/" target="_blank">
-        <i class="fas fa-rocket">&nbsp;</i>rocket.chat (NSFW)
-      </a>
-    </div>
+    <div class="sectionGroupContainer">
+      <div class="sectionGroup">
+        <div class="topic">
+          Contact Me!
+        </div>
 
-    <div id="topic">
-      Support Me!
-    </div>
-
-    <div id="links">
-      <a class="link" href="https://ko-fi.com/omurice_kun" target="_blank">
-        <i class="fas fa-coffee">&nbsp;</i>Ko-fi
-      </a>
-    </div>
-
-    <div id="topic">
-      Contact Me!
-    </div>
-
-    <div id="links">
-      <a class="link" href="https://twitter.com/messages/compose?recipient_id=1103173649580748800" target="_blank">
-        <i class="fab fa-twitter-square">&nbsp;</i>DM me on Twitter
-      </a>
-      <a class="link" href="https://discordapp.com/users/258274910957207564" target="_blank">
-        <i class="fab fa-discord">&nbsp;</i>DM me on Discord
-      </a>
-      <a class="link" href="mailto:omurice@omurice-kun.com" target="_blank">
-        <i class="fas fa-envelope">&nbsp;</i>e-mail me
-      </a>
+        <div class="links">
+          <a class="link" href="https://twitter.com/messages/compose?recipient_id=1103173649580748800" target="_blank">
+            <i class="fab fa-twitter-square">&nbsp;</i>DM me on Twitter
+          </a>
+          <a class="link" href="https://discordapp.com/users/258274910957207564" target="_blank">
+            <i class="fab fa-discord">&nbsp;</i>DM me on Discord
+          </a>
+          <a class="link" href="mailto:omurice@omurice-kun.com" target="_blank">
+            <i class="fas fa-envelope">&nbsp;</i>e-mail me
+          </a>
+        </div>
+      </div>
     </div>
 
     <div id="hashtag">
