Added R-18 logo to items

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             <i class="fab fa-product-hunt">&nbsp;</i>Plurk
           </a>
           <a class="link" href="https://misskey.io/@omurice_kun" target="_blank">
-            <img src="icons/misskey.svg" alt="Logo" class="logo-icon">misskey.io (WIP)
+            <img src="icons/misskey.svg" alt="Logo" class="logo-icon">misskey.io 🔞 (WIP)
           </a>
           <a class="link" href="https://baraag.net/@omurice_kun" target="_blank">
-            <img src="icons/mastodon.svg" alt="Logo" class="logo-icon">baraag.net (WIP)
+            <img src="icons/mastodon.svg" alt="Logo" class="logo-icon">baraag.net 🔞 (WIP)
           </a>
         </div>
       </div>
@@ -89,10 +89,10 @@
             <img src="icons/pixiv.svg" alt="Logo" class="logo-icon">Pixiv
           </a>
           <a class="link" href="https://omurice.fanbox.cc" target="_blank">
-            <img src="icons/fanbox.svg" alt="Logo" class="logo-icon">FANBOX
+            <img src="icons/fanbox.svg" alt="Logo" class="logo-icon">FANBOX 🔞
           </a>
           <a class="link" href="https://fantia.jp/omurice" target="_blank">
-            <img src="icons/fantia.svg" alt="Logo" class="logo-icon">Fantia
+            <img src="icons/fantia.svg" alt="Logo" class="logo-icon">Fantia 🔞
           </a>
         </div>
       </div>
@@ -109,7 +109,7 @@
             <i class="fab fa-discord">&nbsp;</i>Discord Server (WIP)
           </a>
           <a class="link" href="https://chat.omurice-kun.com/" target="_blank">
-            <i class="fas fa-rocket">&nbsp;</i>rocket.chat (NSFW)
+            <i class="fas fa-rocket">&nbsp;</i>rocket.chat 🔞
           </a>
         </div>
       </div>
