--- a/index.html
+++ b/index.html
@@ -62,9 +62,6 @@
           <a class="link" href="https://www.instagram.com/omurice.art" target="_blank">
             <i class="fab fa-instagram">&nbsp;</i>Instagram (WIP)
           </a>
-          <a class="link" href="https://www.twitch.tv/omu_kun" target="_blank">
-            <i class="fab fa-twitch">&nbsp;</i>Twitch
-          </a>
           <a class="link" href="https://www.plurk.com/yoyo091600" target="_blank">
             <i class="fab fa-product-hunt">&nbsp;</i>Plurk
           </a>
@@ -93,6 +90,23 @@
           </a>
           <a class="link" href="https://fantia.jp/omurice" target="_blank">
             <img src="icons/fantia.svg" alt="Logo" class="logo-icon">Fantia 🔞
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="sectionGroupContainer">
+      <div class="sectionGroup">
+        <div class="topic">
+          Streaming
+        </div>
+
+        <div class="links">
+          <a class="link" href="https://www.twitch.tv/omu_kun" target="_blank">
+            <i class="fab fa-twitch">&nbsp;</i>Twitch.tv
+          </a>
+          <a class="link" href="https://kick.com/omu-kun" target="_blank">
+            <i class="fab fa-kickstarter-k">&nbsp;</i>Kick.com
           </a>
         </div>
       </div>
