--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
           <a class="link" href="https://ko-fi.com/omurice_kun" target="_blank">
             <i class="fas fa-coffee">&nbsp;</i>Ko-fi
           </a>
+          <a class="link" href="https://paypal.me/omuricekun" target="_blank">
+            <i class="fab fa-paypal">&nbsp;</i>Paypal
+          </a>
         </div>
       </div>
     </div>
