remove wip for social media links

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
             <i class="fab fa-twitter">&nbsp;</i>Twitter
           </a>
           <a class="link" href="https://www.instagram.com/omurice.art" target="_blank">
-            <i class="fab fa-instagram">&nbsp;</i>Instagram (WIP)
+            <i class="fab fa-instagram">&nbsp;</i>Instagram
           </a>
           <a class="link" href="https://www.plurk.com/yoyo091600" target="_blank">
             <i class="fab fa-product-hunt">&nbsp;</i>Plurk
           </a>
           <a class="link" href="https://misskey.io/@omurice_kun" target="_blank">
-            <img src="icons/misskey.svg" alt="Logo" class="logo-icon">misskey.io 🔞 (WIP)
+            <img src="icons/misskey.svg" alt="Logo" class="logo-icon">misskey.io 🔞
           </a>
           <a class="link" href="https://baraag.net/@omurice_kun" target="_blank">
-            <img src="icons/mastodon.svg" alt="Logo" class="logo-icon">baraag.net 🔞 (WIP)
+            <img src="icons/mastodon.svg" alt="Logo" class="logo-icon">baraag.net 🔞
           </a>
         </div>
       </div>
