remove "server" wording from the discord link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <div class="links">
           <a class="link" href="https://discord.gg/r7SGbacXS8" target="_blank">
-            <i class="fab fa-discord">&nbsp;</i>Discord Server (WIP)
+            <i class="fab fa-discord">&nbsp;</i>Discord (WIP)
           </a>
           <a class="link" href="https://chat.omurice-kun.com/" target="_blank">
             <i class="fas fa-rocket">&nbsp;</i>rocket.chat 🔞
