--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
 
         <div class="links">
-          <a class="link" href="https://discord.gg/r7SGbacXS8" target="_blank">
+          <a class="link" href="https://discord.omurice-kun.com/" target="_blank">
             <i class="fab fa-discord">&nbsp;</i>Discord
           </a>
           <a class="link" href="https://chat.omurice-kun.com/" target="_blank">
