add physical products

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="https://avatars0.githubusercontent.com/u/58869699" type="image/x-icon" />
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <!-- http://man.hubwiz.com/docset/Font_Awesome.docset/Contents/Resources/Documents/index.html -->
     <!-- Core theme CSS -->
     <link rel="stylesheet" href="style.css">
   </head>
@@ -124,6 +125,23 @@
           </a>
           <a class="link" href="https://chat.omurice-kun.com/" target="_blank">
             <i class="fas fa-rocket">&nbsp;</i>rocket.chat 🔞
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="sectionGroupContainer">
+      <div class="sectionGroup">
+        <div class="topic">
+          Physical Products
+        </div>
+
+        <div class="links">
+          <a class="link" href="https://cuddlyoctopus.com/product-tag/partner-omurice/" target="_blank">
+            <i class="fas fa-bed">&nbsp;</i>Body Pillow 🔞
+          </a>
+          <a class="link" href="https://oioibunny.com/vendor/omurice%e7%82%b8%e9%bb%91%e8%bc%aa/" target="_blank">
+            <i class="fas fa-vector-square">&nbsp;</i>Art Prints
           </a>
         </div>
       </div>
