--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
 
         <div class="links">
-          <a class="link" href="https://cuddlyoctopus.com/product-tag/partner-omurice/" target="_blank">
+          <a class="link" href="https://pillow.omurice-kun.com/" target="_blank">
             <i class="fas fa-bed">&nbsp;</i>Body Pillow 🔞
           </a>
           <a class="link" href="https://oioibunny.com/vendor/omurice%e7%82%b8%e9%bb%91%e8%bc%aa/" target="_blank">
