added mastodon link verify

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- http://man.hubwiz.com/docset/Font_Awesome.docset/Contents/Resources/Documents/index.html -->
     <!-- Core theme CSS -->
     <link rel="stylesheet" href="style.css">
+    <link rel="me" href="https://baraag.net/@omurice_kun">Mastodon</a>
   </head>
 
   <body>
