--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
           <a class="link" href="https://www.plurk.com/yoyo091600" target="_blank">
             <i class="fab fa-product-hunt">&nbsp;</i>Plurk
           </a>
+          <a class="link" href="https://bsky.app/profile/omurice-kun.com" target="_blank">
+            <i class="fa fa-cloud">&nbsp;</i>Bluesky 🔞
+          </a>
           <a class="link" href="https://misskey.io/@omurice_kun" target="_blank">
             <img src="icons/misskey.svg" alt="Logo" class="logo-icon">misskey.io 🔞
           </a>
