Hide support me section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>
     </div>
 
-    <div class="sectionGroupContainer">
+    <!-- <div class="sectionGroupContainer">
       <div class="sectionGroup">
         <div class="topic">
           Support Me!
@@ -152,7 +152,7 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="sectionGroupContainer">
       <div class="sectionGroup">
