Added R-18 tag to some sites

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <i class="fab fa-instagram">&nbsp;</i>Instagram
           </a>
           <a class="link" href="https://www.plurk.com/yoyo091600" target="_blank">
-            <i class="fab fa-product-hunt">&nbsp;</i>Plurk
+            <i class="fab fa-product-hunt">&nbsp;</i>Plurk 🔞
           </a>
           <a class="link" href="https://bsky.app/profile/omurice-kun.com" target="_blank">
             <i class="fa fa-cloud">&nbsp;</i>Bluesky 🔞
@@ -91,7 +91,7 @@
 
         <div class="links">
           <a class="link" href="https://pixiv.me/roza4957" target="_blank">
-            <img src="icons/pixiv.svg" alt="Logo" class="logo-icon">Pixiv
+            <img src="icons/pixiv.svg" alt="Logo" class="logo-icon">Pixiv 🔞
           </a>
           <a class="link" href="https://omurice.fanbox.cc" target="_blank">
             <img src="icons/fanbox.svg" alt="Logo" class="logo-icon">FANBOX 🔞
