--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omurice炸黑輪 | Linktree</title>
+    <title>salmoooon</title>
     <!-- Favicon -->
-    <link rel="icon" href="https://avatars0.githubusercontent.com/u/58869699" type="image/x-icon" />
+    <link rel="icon" href="https://avatars0.githubusercontent.com/u/66685030" type="image/x-icon" />
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- http://man.hubwiz.com/docset/Font_Awesome.docset/Contents/Resources/Documents/index.html -->
     <!-- Core theme CSS -->
     <link rel="stylesheet" href="style.css">
-    <link rel="me" href="https://baraag.net/@omurice_kun">Mastodon</a>
+    <link rel="me" href="https://baraag.net/@salmoooon">Mastodon</a>
   </head>
 
   <body>
@@ -24,30 +24,30 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="https://avatars0.githubusercontent.com/u/58869699" alt="Profile Picture">
+      <img src="https://avatars0.githubusercontent.com/u/66685030" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
-          <a href="https://avatars0.githubusercontent.com/u/58869699" target="_blank">
-            <img src="https://avatars0.githubusercontent.com/u/58869699" alt="Profile Picture">
+          <a href="https://avatars0.githubusercontent.com/u/66685030" target="_blank">
+            <img src="https://avatars0.githubusercontent.com/u/66685030" alt="Profile Picture">
           </a>
         </div>
         <div class="popup-quote">
-          ❤️❤️❤️
+          🚬🚬🚬
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
     </div>
 
     <div id="userName">
-      Omurice炸黑輪
+      salmoooon
     </div>
 
     <div class="links">
-      <a class="link" href="https://www.omurice-kun.com/commission" target="_blank">
-        <i class="fas fa-info">&nbsp;</i>Commissions
+      <a class="link" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Marlboro_red_pack_front_NZ.jpg/450px-Marlboro_red_pack_front_NZ.jpg" target="_blank">
+        <i class="fas fa-smoking">&nbsp;</i>Here, have one
       </a>
     </div>
     
@@ -58,32 +58,20 @@
         </div>
         
         <div class="links">
-          <a class="link" href="https://twitter.com/yoyo091600" target="_blank">
+          <a class="link" href="https://twitter.com/salmoooon_kun" target="_blank">
             <i class="fab fa-twitter">&nbsp;</i>Twitter
           </a>
-          <a class="link" href="https://www.twitch.tv/omu_kun" target="_blank">
-            <i class="fab fa-twitch">&nbsp;</i>Twitch
+          <a class="link" href="https://bsky.app/profile/nicotine.buzz" target="_blank">
+            <i class="fa fa-cloud">&nbsp;</i>Bluesky
           </a>
-          <a class="link" href="https://www.instagram.com/omurice.art" target="_blank">
-            <i class="fab fa-instagram">&nbsp;</i>Instagram
-          </a>
-          <a class="link" href="https://www.plurk.com/yoyo091600" target="_blank">
-            <i class="fab fa-product-hunt">&nbsp;</i>Plurk 🔞
-          </a>
-          <a class="link" href="https://bsky.app/profile/omurice-kun.com" target="_blank">
-            <i class="fa fa-cloud">&nbsp;</i>Bluesky 🔞
-          </a>
-          <a class="link" href="https://misskey.io/@omurice_kun" target="_blank">
-            <img src="icons/misskey.svg" alt="Logo" class="logo-icon">misskey.io 🔞
-          </a>
-          <a class="link" href="https://baraag.net/@omurice_kun" target="_blank">
-            <img src="icons/mastodon.svg" alt="Logo" class="logo-icon">baraag.net 🔞
+          <a class="link" href="https://baraag.net/@salmoooon" target="_blank">
+            <img src="icons/mastodon.svg" alt="Logo" class="logo-icon">baraag.net
           </a>
         </div>
       </div>
     </div>
 
-    <div class="sectionGroupContainer">
+    <!-- <div class="sectionGroupContainer">
       <div class="sectionGroup">
         <div class="topic">
           Art Gallery
@@ -101,9 +89,9 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="sectionGroupContainer">
+    <!-- <div class="sectionGroupContainer">
       <div class="sectionGroup">
         <div class="topic">
           Community
@@ -118,9 +106,9 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="sectionGroupContainer">
+    <!-- <div class="sectionGroupContainer">
       <div class="sectionGroup">
         <div class="topic">
           Physical Products
@@ -135,7 +123,7 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- <div class="sectionGroupContainer">
       <div class="sectionGroup">
@@ -154,7 +142,7 @@
       </div>
     </div> -->
 
-    <div class="sectionGroupContainer">
+    <!-- <div class="sectionGroupContainer">
       <div class="sectionGroup">
         <div class="topic">
           Contact Me!
@@ -172,10 +160,10 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div id="hashtag">
-      ❤️❤️❤️
+      🚬🚬🚬
     </div>
 
     <script>
