--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- http://man.hubwiz.com/docset/Font_Awesome.docset/Contents/Resources/Documents/index.html -->
     <!-- Core theme CSS -->
     <link rel="stylesheet" href="style.css">
-    <a rel="me" href="https://baraag.net/@salmoooon">Mastodon</a>
+    <link rel="me" href="https://baraag.net/@salmoooon">
   </head>
 
   <body>
