Added link to commissioned art

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </div>
 
     <div class="links">
-      <a class="link" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Marlboro_red_pack_front_NZ.jpg/450px-Marlboro_red_pack_front_NZ.jpg" target="_blank">
-        <i class="fas fa-smoking">&nbsp;</i>Here, have one
+      <a class="link" href="https://commissioned.nicotine.buzz/" target="_blank">
+        <i class="fas fa-smoking">&nbsp;</i>Commissioned Art
       </a>
     </div>
     
