--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="links">
       <a class="link" href="https://commissioned.nicotine.buzz/" target="_blank">
-        <i class="fas fa-smoking">&nbsp;</i>Commissioned Art
+        <i class="fas fa-smoking">&nbsp;</i>Gallery
       </a>
     </div>
     
