change gallery url

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="links">
-      <a class="link" href="https://commissioned.nicotine.buzz/" target="_blank">
+      <a class="link" href="https://gallery.nicotine.buzz/" target="_blank">
         <i class="fas fa-smoking">&nbsp;</i>Gallery
       </a>
     </div>
