added r18 logo to the gallery

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="links">
       <a class="link" href="https://gallery.nicotine.buzz/" target="_blank">
-        <i class="fas fa-smoking">&nbsp;</i>Gallery
+        <i class="fas fa-smoking">&nbsp;</i>Gallery 🔞
       </a>
     </div>
     
