added r18 logo to baraag

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <i class="fa fa-cloud">&nbsp;</i>Bluesky
           </a>
           <a class="link" href="https://baraag.net/@salmoooon" target="_blank">
-            <img src="icons/mastodon.svg" alt="Logo" class="logo-icon">baraag.net
+            <img src="icons/mastodon.svg" alt="Logo" class="logo-icon">baraag.net 🔞
           </a>
         </div>
       </div>
