Totally remake website (WIP)

--- a/index.html
+++ b/index.html
@@ -1,121 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>salmoooon</title>
-    <!-- Favicon -->
-    <link rel="icon" href="https://avatars0.githubusercontent.com/u/66685030" type="image/x-icon" />
-    <!-- Font Awesome icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <!-- http://man.hubwiz.com/docset/Font_Awesome.docset/Contents/Resources/Documents/index.html -->
-    <!-- Core theme CSS -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="me" href="https://baraag.net/@salmoooon">
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>salmoooon</title>
 
-  <body>
-    <!-- Parallax Pixel Background Animation -->
-    <section class="animated-background">
-      <div id="stars1"></div>
-      <div id="stars2"></div>
-      <div id="stars3"></div>
-    </section>
-    <!-- End of Parallax Pixel Background Animation -->
+  <link rel="stylesheet" href="style.css">
 
-    <a id="profilePicture" href="#popup">
-      <img src="https://avatars0.githubusercontent.com/u/66685030" alt="Profile Picture">
-    </a>
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/favicon/site.webmanifest">
+</head>
+<body data-theme="dark">
 
-    <div class="overlay" id="popup">
-      <div class="popup">
-        <div class="popup-photo">
-          <a href="https://avatars0.githubusercontent.com/u/66685030" target="_blank">
-            <img src="https://avatars0.githubusercontent.com/u/66685030" alt="Profile Picture">
-          </a>
-        </div>
-        <div class="popup-quote">
-          🚬🚬🚬
-        </div>
-        <a class="popup-close" onclick="history.back()">&times;</a>
+  <!-- Canvas for star background -->
+  <canvas id="star-canvas"></canvas>
+
+  <!-- Dark/Light Toggle Switch -->
+  <div class="theme-toggle">
+    <label class="switch">
+      <input type="checkbox" id="theme-checkbox">
+      <span class="slider"></span>
+    </label>
+  </div>
+
+  <div class="container">
+
+    <!-- Name and Profile Pic -->
+    <div class="card profile">
+      <img src="/images/profile.png" alt="Profile picture">
+      <div>
+        <h1>salmoooon</h1>
+        <p>Wrong place if you came for your daily fix...🚬</p>
+        <p>You'll find everything I want you to know about me here though!</p>
       </div>
     </div>
 
-    <div id="userName">
-      salmoooon
+    <!-- Things I Enjoy -->
+    <div class="card">
+      <details class="animated">
+        <summary>Things I Enjoy:</summary>
+        <div class="details-content">
+          <ul>
+            <li>Smoking
+              <ul>
+                <li>Cigs, cigars, vapes, shisha, you name it!</li>
+                <li>wip</li>
+              </ul>
+            </li>
+            <li>Shota art
+              <ul>
+                <li>wip</li>
+                <li>wip</li>
+              </ul>
+            </li>
+            <li>Furries
+              <ul>
+                <li>wip</li>
+                <li>wip</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </details>
     </div>
 
-    <div class="links">
-      <a class="link" href="https://gallery.nicotine.buzz/" target="_blank">
-        <i class="fas fa-smoking">&nbsp;</i>Gallery 🔞
-      </a>
+    <!-- Things I Hate -->
+    <div class="card">
+      <details class="animated">
+        <summary>Things I Hate:</summary>
+        <div class="details-content">
+          <ul>
+            <li>wip
+              <ul>
+                <li>wip</li>
+                <li>wip</li>
+              </ul>
+            </li>
+            <li>wip
+              <ul>
+                <li>wip</li>
+                <li>wip</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </details>
     </div>
-    
-    <div class="sectionGroupContainer">
-      <div class="sectionGroup">
-        <div class="topic">
-          Social Media
+
+    <!-- Gallery Section -->
+    <div class="card gallery">
+      <h2>My furry OC, Marbo</h2>
+        <details class="animated">
+          <summary>Character Settings:</summary>
+          <div class="details-content">
+            <ul>
+              <li>wip
+                <ul>
+                  <li>wip</li>
+                  <li>wip</li>
+                </ul>
+              </li>
+              <li>wip
+                <ul>
+                  <li>wip</li>
+                  <li>wip</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </details>
+        <div class="gallery-grid">
+          <img src="/images/1.jpg" alt="Character Sheet" 
+            data-name="Character Sheet" 
+            data-desc="Omurice炸黑輪" 
+            data-link="https://links.omurice-kun.com/">
+          <img src="/images/2.jpg" alt="Sad Vibe" 
+            data-name="Sad Vibe" 
+            data-desc="Delmu" 
+            data-link="https://skeb.jp/@_Delmu">
+          <img src="/images/3.jpg" alt="Wanna Smoke?" 
+            data-name="Wanna Smoke?" 
+            data-desc="Sugarpumpkin" 
+            data-link="https://sugarpumpkin15.carrd.co/">
+          <img src="/images/4.jpg" alt="Just Chillin" 
+            data-name="Just Chillin" 
+            data-desc="あおいの" 
+            data-link="https://skeb.jp/@shir0kur0_bw">
         </div>
-        
-        <div class="links">
-          <a class="link" href="https://twitter.com/salmoooon_kun" target="_blank">
-            <i class="fab fa-twitter">&nbsp;</i>Twitter
-          </a>
-          <a class="link" href="https://bsky.app/profile/nicotine.buzz" target="_blank">
-            <i class="fa fa-cloud">&nbsp;</i>Bluesky
-          </a>
-          <a class="link" href="https://baraag.net/@salmoooon" target="_blank">
-            <img src="icons/mastodon.svg" alt="Logo" class="logo-icon">baraag.net 🔞
-          </a>
-        </div>
+    </div>
+
+    <!-- Lightbox Modal with Arrows and Caption -->
+    <div id="lightbox" class="lightbox">
+      <span class="close">&times;</span>
+      <span class="arrow left">&#10094;</span>
+      <span class="arrow right">&#10095;</span>
+      <img class="lightbox-img" src="" alt="Artwork">
+      <div class="lightbox-caption">
+        <strong class="art-name"></strong><br>
+        <span class="art-desc"></span>
       </div>
     </div>
 
-    <div id="hashtag">
-      🚬🚬🚬
+    <!-- Contact -->
+    <div class="card contact">
+      <h2>Contact Me</h2>
+      <p>I don't do social media anymore, but you can still find me here:</p>
+      <a href="mailto:salmoooon@nicotine.buzz">Email</a>
+      <a href="https://discordapp.com/users/102067807251869696" target="_blank">Discord</a>
     </div>
 
-    <script>
+    <footer>
+      © 2026 salmoooon
+    </footer>
 
-      const stars1 = []
-      const stars2 = []
-      const stars3 = []
+  </div>
 
-      const numberOfStars1 = '1000'
-      const numberOfStars2 = '600'
-      const numberOfStars3 = '100'
+  <script src="script.js"></script>
 
-
-      for (let i = 0; i < numberOfStars1; i++) {
-        const pos1 = (Math.floor(Math.random() * 5200))
-        const pos2 = (Math.floor(Math.random() * 5200))
-        stars1.push(`${pos1}px ${pos2}px #fff`)
-      }
-
-      for (let i = 0; i < numberOfStars2; i++) {
-        const pos1 = (Math.floor(Math.random() * 5200))
-        const pos2 = (Math.floor(Math.random() * 5200))
-        stars2.push(`${pos1}px ${pos2}px #fff`)
-      }
-
-      for (let i = 0; i < numberOfStars3; i++) {
-        const pos1 = (Math.floor(Math.random() * 5200))
-        const pos2 = (Math.floor(Math.random() * 5200))
-        stars3.push(`${pos1}px ${pos2}px #fff`)
-      }
-
-      const addCSS = css => document.head.appendChild(document.createElement("style")).innerHTML = css;
-
-      addCSS(`#stars1{ box-shadow:${stars1}}`)
-      addCSS(`#stars1:after{ box-shadow:${stars1}}`)
-
-      addCSS(`#stars2{ box-shadow:${stars2}}`)
-      addCSS(`#stars2:after{ box-shadow:${stars2}}`)
-
-      addCSS(`#stars3{ box-shadow:${stars3}}`)
-      addCSS(`#stars3:after{ box-shadow:${stars3}}`)
-
-    </script>
-
-  </body>
+</body>
 </html>
